[project]
name = "gaussian-splatting"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "plyfile==1.1.3",
  "cuda-toolkit==13.1.0",
  "opencv-python==4.12.0.88",
  "joblib==1.5.3",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
